# Yahboom-G1-Tank-Robot-custom-model

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/yahboom_g1_description/lib/yahboom_g1_description/: real_movement_controller.py
install/yahboom_g1_description/share/ament_index/resource_index/package_run_dependencies/: yahboom_g1_description
install/yahboom_g1_description/share/yahboom_g1_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/yahboom_g1_description/share/yahboom_g1_description/config/: controllers.yaml
install/yahboom_g1_description/share/yahboom_g1_description/launch/: bringup_gazebo.launch.py  final_clean_tank.launch.py  final_correct_wheels.launch.py  final_proper_wheels.launch.py  final_simple_movement.launch.py  gazebo_world.launch.py  proper_tank_gazebo.launch.py  simple_box_tank.launch.py  simple_test.launch.py  tank_gazebo.launch.py
install/yahboom_g1_description/share/yahboom_g1_description/rviz/: tank_demo.rviz  tank_view.rviz
install/yahboom_g1_description/share/yahboom_g1_description/urdf/: yahboom_g1.urdf  yahboom_g1_clear_tank.urdf  yahboom_g1_final.urdf  yahboom_g1_final_tank.urdf  yahboom_g1_fixed.urdf  yahboom_g1_original_clean.urdf  yahboom_g1_proper_tank.urdf  yahboom_g1_simple.urdf
log/: latest_build
src/yahboom_g1_description/: CMakeLists.txt  tank_controller.py
src/yahboom_g1_description/launch/: tank_with_sensors.launch.py
src/yahboom_g1_description/launch/Old/: clear_tank_gazebo.launch.py  demo_with_gui.launch.py  display.launch.py  final_demo.launch.py  final_movement.launch.py  final_working.launch.py  real_tank_gazebo.launch.py  real_tank_movement.launch.py  simple_gazebo_fixed.launch.py  tank_gazebo_sensors.launch.py  view_tank_rviz.launch.py
src/yahboom_g1_description/rviz/: clean_tank_movement.rviz  clean_tank_view.rviz  movement_demo.rviz  view_urdf.rviz
src/yahboom_g1_description/scripts/: correct_wheel_controller.py  mobile_tank_controller.py  proper_wheel_rolling.py  simple_tank_movement.py  tank_controller.py  tank_controller_fixed.py  tank_controller_working.py  test_movement.py
src/yahboom_g1_description/urdf/: yahboom_g1_with_sensors.urdf
src/yahboom_g1_description/urdf/Old/: yahboom_g1_corrected.urdf  yahboom_g1_real_tank.urdf  yahboom_g1_simple_box.urdf  yahboom_g1_working.urdf
(+21 files in other folders)
